format code & delombok